Collapse all button fixes

--- a/css/screen.css
+++ b/css/screen.css
@@ -269,7 +269,7 @@ header {
   background: #4dffe7;
   color: #333333; }
   /* line 126, ../sass/_style.sass */
-  #expando-wrapper a[href] {
+  #expando-wrapper p a[href], #expando-wrapper li a[href] {
     color: black;
     text-decoration: underline;
     -webkit-transition: all 0.2s ease-out;
@@ -284,32 +284,50 @@ header {
     max-width: 32em;
     position: relative; }
     /* line 133, ../sass/_style.sass */
+    #expando-wrapper > div.expando-close {
+      display: none;
+      text-align: center;
+      margin-bottom: -1em;
+      font-size: 2.8em;
+      line-height: 1.07143em; }
+      /* line 138, ../sass/_style.sass */
+      #expando-wrapper > div.expando-close a:hover {
+        background: none;
+        -webkit-transition: none;
+        -moz-transition: none;
+        -o-transition: none;
+        transition: none; }
+      /* line 141, ../sass/_style.sass */
+      #expando-wrapper > div.expando-close i {
+        position: relative;
+        top: -0.4em; }
+    /* line 144, ../sass/_style.sass */
     #expando-wrapper > div ul {
       margin-left: 10px; }
-  /* line 135, ../sass/_style.sass */
-  #expando-wrapper .collapse a[href] {
-    color: #333333;
+  /* line 146, ../sass/_style.sass */
+  #expando-wrapper a[href] i {
+    color: #4f4f4f;
     text-decoration: none;
     margin-right: 5px;
     -webkit-transition: none;
     -moz-transition: none;
     -o-transition: none;
     transition: none; }
-    /* line 140, ../sass/_style.sass */
-    #expando-wrapper .collapse a[href]:hover {
+    /* line 151, ../sass/_style.sass */
+    #expando-wrapper a[href] i:hover {
       background: none; }
 
-/* line 144, ../sass/_style.sass */
+/* line 155, ../sass/_style.sass */
 #skills .set {
   margin-bottom: 10px; }
-  /* line 146, ../sass/_style.sass */
+  /* line 157, ../sass/_style.sass */
   #skills .set:last-child {
     margin-bottom: 0; }
 
-/* line 151, ../sass/_style.sass */
+/* line 162, ../sass/_style.sass */
 div[data-picture] {
   text-align: center; }
-  /* line 153, ../sass/_style.sass */
+  /* line 164, ../sass/_style.sass */
   div[data-picture] > img {
     width: 100%;
     max-width: 100%;
@@ -317,33 +335,33 @@ div[data-picture] {
 
 /* Hiding and displaying elements with media queries */
 @media screen and (max-width: 480px) {
-  /* line 159, ../sass/_style.sass */
+  /* line 170, ../sass/_style.sass */
   .hidden-phone {
     display: none !important; } }
 
 @media screen and (min-width: 481px) and (max-width: 1024px) {
-  /* line 163, ../sass/_style.sass */
+  /* line 174, ../sass/_style.sass */
   .hidden-tablet {
     display: none !important; } }
 
 @media screen and (min-width: 1025px) {
-  /* line 167, ../sass/_style.sass */
+  /* line 178, ../sass/_style.sass */
   .hidden-desktop {
     display: none !important; } }
 
 /* Tablets and larger screens */
 @media screen and (min-width: 481px) {
-  /* line 174, ../sass/_style.sass */
+  /* line 185, ../sass/_style.sass */
   header p {
     text-align: justify; }
 
-  /* line 177, ../sass/_style.sass */
+  /* line 188, ../sass/_style.sass */
   .text {
     padding: 10px;
     min-width: 15em; } }
 /* Desktop-only styles */
 @media screen and (min-width: 1025px) {
-  /* line 183, ../sass/_style.sass */
+  /* line 194, ../sass/_style.sass */
   a[href] {
     color: black;
     text-decoration: underline;
@@ -367,31 +385,31 @@ div[data-picture] {
       -o-border-radius: 3px;
       border-radius: 3px; }
 
-  /* line 185, ../sass/_style.sass */
+  /* line 196, ../sass/_style.sass */
   div.project {
     display: table; }
-    /* line 187, ../sass/_style.sass */
+    /* line 198, ../sass/_style.sass */
     div.project .row {
       display: table-row; }
-      /* line 189, ../sass/_style.sass */
+      /* line 200, ../sass/_style.sass */
       div.project .row > div {
         display: table-cell;
         vertical-align: middle; }
-        /* line 192, ../sass/_style.sass */
+        /* line 203, ../sass/_style.sass */
         div.project .row > div[data-picture] {
           width: 66%; }
-          /* line 194, ../sass/_style.sass */
+          /* line 205, ../sass/_style.sass */
           div.project .row > div[data-picture]:nth-child(even) {
             text-align: right; }
-          /* line 196, ../sass/_style.sass */
+          /* line 207, ../sass/_style.sass */
           div.project .row > div[data-picture] img {
             margin-bottom: -7px; }
 
-  /* line 200, ../sass/_style.sass */
+  /* line 211, ../sass/_style.sass */
   header #me a[href]:hover {
     background: #a3ff4d;
     color: #333333; }
-  /* line 203, ../sass/_style.sass */
+  /* line 214, ../sass/_style.sass */
   header #me a[href].on {
     background: #a3ff4d;
     color: #333333;
@@ -401,7 +419,7 @@ div[data-picture] {
     -o-border-radius: 3px;
     border-radius: 3px; }
 
-  /* line 208, ../sass/_style.sass */
-  .collapse a[href] {
+  /* line 219, ../sass/_style.sass */
+  .collapse {
     position: absolute;
-    left: -15px; } }
+    left: -45px; } }
